# disksage

./: .gitattributes  .gitignore  .trivyignore  README.md  SECURITY.md  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/superpowers/plans/: 2026-07-10-m1-scan-treemap.md  2026-07-11-m2-cleaners-safety.md  2026-07-11-m3-dupes.md  2026-07-11-m4a-ontology-inventory.md  2026-07-11-m4b-organize-move.md  2026-07-11-m5-embedded-llm.md  2026-07-12-m6-packaging-ci.md  2026-07-13-age-based-rule-predicates.md  2026-07-13-llm-advanced-reasoning-web-enrichment.md  2026-07-13-owl-subsumption-reasoner.md  2026-07-13-user-rule-classification.md
docs/superpowers/specs/: 2026-07-10-disksage-design.md  2026-07-13-age-based-rule-predicates-design.md  2026-07-13-llm-advanced-reasoning-web-enrichment-design.md  2026-07-13-owl-subsumption-reasoner-design.md  2026-07-13-user-rule-classification-design.md  2026-07-16-cloud-offload-lineage-design.md  2026-07-16-cloud-provider-oauth-pkce-design.md  2026-07-16-cloud-review-decisions-design.md  2026-07-16-cloud-transfer-safety-gate-design.md  2026-07-16-dataset-metadata-profile-design.md  2026-07-16-incomplete-download-metadata-design.md  2026-07-16-metadata-probe-runtime-safety-design.md  2026-07-16-reviewed-fallback-date-evidence-design.md  2026-07-16-stale-worktree-inventory-design.md  2026-07-17-headless-cloud-review-design.md  2026-07-17-native-file-provider-attestation-design.md  2026-07-17-verified-source-trash-design.md  2026-07-20-archive-git-tree-proof-design.md  2026-07-20-existing-cloud-copy-adoption-design.md  2026-07-20-naruon-file-lineage-export-design.md  2026-07-21-apfs-reclaim-evidence-design.md  2026-07-21-cloud-capacity-evidence-design.md  2026-07-21-podman-reclaim-evidence-design.md
src-tauri/: Cargo.toml  Info.plist  disksage-cloud-plan.Info.plist  osv-scanner.toml  tauri.conf.json
src-tauri/resources/ontology/: default.ttl
src-tauri/src/: archive_git_tree.rs  cloud.rs  cloud_eviction.rs  cloud_local_eviction.rs  cloud_local_inventory.rs  cloud_review.rs  cloud_transfer.rs  commands.rs  content_digest.rs  dataset_metadata.rs  dev_artifacts.rs  dupes.rs  inventory.rs  lib.rs  main.rs  naruon_lineage.rs  ontology.rs  organize.rs  podman_reclaim.rs  provider_api_client.rs  provider_capacity.rs  provider_evidence.rs  provider_oauth.rs  provider_sync.rs  reasoning.rs  reclaim.rs  rules.rs  safety.rs  scanner.rs  settings.rs  userrules.rs  worktrees.rs
src-tauri/src/llm/: backend.rs  cache.rs  engine.rs  mod.rs  model.rs  parse.rs  prompt.rs  verdict.rs
src-tauri/src/web/: mod.rs  ureq_lookup.rs
src/lib/: Cleanup.svelte  CloudArchive.svelte  Duplicates.svelte  Inventory.svelte  Organize.svelte  Settings.svelte  TopFiles.svelte  Treemap.svelte  Worktrees.svelte  api.test.ts  api.ts  cloudReviewQueue.test.ts  cloudReviewQueue.ts  dupeGuard.test.ts  dupeGuard.ts  fmt.test.ts  fmt.ts  treemap.test.ts  treemap.ts  verdictBadge.test.ts  verdictBadge.ts  viteHost.test.ts  viteHost.ts
src/routes/: +page.svelte
