[package]
name = "disksage"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "disksage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "disksage-cloud-plan"
path = "src/bin/disksage-cloud-plan.rs"
required-features = ["cloud-cli"]

[[bin]]
name = "disksage-archive-tree"
path = "src/bin/disksage-archive-tree.rs"
required-features = ["archive-cli"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
trash = "5.2.6"
blake3 = "1.8.5"
base64 = "0.22.1"
oxttl = "0.2.3"
oxrdf = "0.3.3"
llama-cpp-2 = { version = "0.1.151", optional = true }
sha2 = "0.11.0"
sha1 = "0.10.6"
ureq = "3.3.0"
unicode-normalization = "0.1"
csv = "1.4.0"
calamine = "0.36.0"
getrandom = "0.3.4"
keyring = "4.1.5"
zeroize = { version = "1.9.0", features = ["derive"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
memchr = "2.8.3"

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "1.2.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSError", "NSObject", "NSString", "NSURL", "NSValue"] }
plist = "1"

[dev-dependencies]
tempfile = "3.27.0"

[features]
archive-cli = []
cloud-cli = []
llm-engine = ["dep:llama-cpp-2"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }
