[package]
name = "disksage"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "disksage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
trash = "5.2.6"
blake3 = "1.8.5"
oxttl = "0.2.3"
oxrdf = "0.3.3"
llama-cpp-2 = { version = "0.1.151", optional = true }
sha2 = "0.11.0"
ureq = "3.3.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.27.0"

[features]
llm-engine = ["dep:llama-cpp-2"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }
